--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/gapsFlat2/lib/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="/gapsFlat2/lib/junit-jupiter-api-5.7.2.jar"/>
+	<classpathentry kind="lib" path="/gapsFlat2/lib/junit-jupiter-engine-5.7.2.jar"/>
+	<classpathentry kind="lib" path="/gapsFlat2/lib/junit-jupiter-params-5.6.2.jar"/>
+	<classpathentry kind="lib" path="/gapsFlat2/lib/junit-platform-console-standalone-1.7.2.jar"/>
+	<classpathentry kind="lib" path="/gapsFlat2/lib/unitTestTracker.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
